--- a/index.html
+++ b/index.html
@@ -26,63 +26,63 @@
           <i class="bx bx-search"></i>
           <input type="text" placeholder="Search..." />
 
-          <!-- <span class="tooltip">Dashboard</span> -->
+          <span class="tooltip">Search...</span>
         </li>
         <li>
           <a href="#">
             <i class="bx bx-grid-alt"></i>
             <span class="links_name">Dashboard</span>
           </a>
-          <!-- <span class="tooltip">Dashboard</span> -->
+          <span class="tooltip">Dashboard</span>
         </li>
         <li>
           <a href="#">
             <i class="bx bx-user"></i>
             <span class="links_name">User</span>
           </a>
-          <!-- <span class="tooltip">Dashboard</span> -->
+          <span class="tooltip">User</span>
         </li>
         <li>
           <a href="#">
             <i class="bx bx-message-square-dots"></i>
             <span class="links_name">Message</span>
           </a>
-          <!-- <span class="tooltip">Dashboard</span> -->
+          <span class="tooltip">Message</span>
         </li>
         <li>
           <a href="#">
             <i class="bx bx-pie-chart"></i>
             <span class="links_name">Analytics</span>
           </a>
-          <!-- <span class="tooltip">Dashboard</span> -->
+          <span class="tooltip">Analytics</span>
         </li>
         <li>
           <a href="#">
             <i class="bx bx-folder"></i>
             <span class="links_name">File manager</span>
           </a>
-          <!-- <span class="tooltip">Dashboard</span> -->
+          <span class="tooltip">File manager</span>
         </li>
         <li>
           <a href="#">
             <i class="bx bx-cart"></i>
             <span class="links_name">Order</span>
           </a>
-          <!-- <span class="tooltip">Dashboard</span> -->
+          <span class="tooltip">Order</span>
         </li>
         <li>
           <a href="#">
             <i class="bx bx-heart"></i>
             <span class="links_name">Saved</span>
           </a>
-          <!-- <span class="tooltip">Dashboard</span> -->
+          <span class="tooltip">Saved</span>
         </li>
         <li>
           <a href="#">
             <i class="bx bx-cog"></i>
             <span class="links_name">Setting</span>
           </a>
-          <!-- <span class="tooltip">Dashboard</span> -->
+          <span class="tooltip">Setting</span>
         </li>
       </ul>
       <div class="profile_content">
@@ -98,5 +98,20 @@
         </div>
       </div>
     </div>
+    <div class="home_content">
+      <div class="text">Home content</div>
+    </div>
+    <script>
+      let btn = document.querySelector("#btn");
+      let sidebar = document.querySelector(".sidebar");
+      let searchBtn = document.querySelector(".bx-search");
+
+      btn.onclick = function () {
+        sidebar.classList.toggle("active");
+      };
+      searchBtn.onclick = function () {
+        sidebar.classList.toggle("active");
+      };
+    </script>
   </body>
 </html>
